Set autofocus to child KPluginSelector on UI load

Summary:
A sibling commit to this commit in frameworks/kcmutils
passes down the focus to the searchbar in KPluginSelector.

BUG: 399516
FIXED-IN: 5.16.0

Depends on D20034

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D20035